@@ -20,8 +20,10 @@ import com.yugabyte.yw.common.ModelFactory;
 import com.yugabyte.yw.common.PlatformServiceException;
 import com.yugabyte.yw.common.gflags.GFlagsValidation;
 import com.yugabyte.yw.models.Universe;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 import org.junit.Before;
 import org.junit.Test;
@@ -35,6 +37,7 @@ public class CheckXUniverseAutoFlagsTest extends CommissionerBaseTest {
 
   @Before
   public void setUp() {
+    super.setUp();
     defaultCustomer = ModelFactory.testCustomer();
     sourceUniverse = ModelFactory.createUniverse("source-universe");
     targetUniverse = ModelFactory.createUniverse("target-universe");
@@ -53,7 +56,7 @@ public class CheckXUniverseAutoFlagsTest extends CommissionerBaseTest {
   @Test
   public void testAutoFlagCheckSuccess() throws Exception {
     when(mockAutoFlagUtil.getPromotedAutoFlags(any(), any(), anyInt()))
-        .thenReturn(Set.of("FLAG_1", "FLAG_2"));
+        .thenReturn(new HashSet<>(Arrays.asList("FLAG_1", "FLAG_2")));
     GFlagsValidation.AutoFlagDetails autoFlagDetails = new GFlagsValidation.AutoFlagDetails();
     autoFlagDetails.name = "FLAG_1";
     GFlagsValidation.AutoFlagDetails autoFlagDetails2 = new GFlagsValidation.AutoFlagDetails();
@@ -75,7 +78,7 @@ public class CheckXUniverseAutoFlagsTest extends CommissionerBaseTest {
   @Test
   public void testAutoFlagFailure() throws Exception {
     when(mockAutoFlagUtil.getPromotedAutoFlags(any(), any(), anyInt()))
-        .thenReturn(Set.of("FLAG_1", "FLAG_2"));
+        .thenReturn(new HashSet<>(Arrays.asList("FLAG_1", "FLAG_2")));
     GFlagsValidation.AutoFlagDetails autoFlagDetails = new GFlagsValidation.AutoFlagDetails();
     autoFlagDetails.name = "FLAG_1";
     GFlagsValidation.AutoFlagsPerServer autoFlagsPerServer =
@@ -101,7 +104,7 @@ public class CheckXUniverseAutoFlagsTest extends CommissionerBaseTest {
   @Test
   public void testAutoFlagFailureForEqualityBothUniverse() throws Exception {
     when(mockAutoFlagUtil.getPromotedAutoFlags(any(), any(), anyInt()))
-        .thenReturn(Set.of("FLAG_1", "FLAG_2"));
+        .thenReturn(new HashSet<>(Arrays.asList("FLAG_1", "FLAG_2")));
     GFlagsValidation.AutoFlagDetails autoFlagDetails = new GFlagsValidation.AutoFlagDetails();
     autoFlagDetails.name = "FLAG_1";
     GFlagsValidation.AutoFlagDetails autoFlagDetails2 = new GFlagsValidation.AutoFlagDetails();
@@ -130,5 +133,49 @@ public class CheckXUniverseAutoFlagsTest extends CommissionerBaseTest {
             + " is not present on universe "
             + sourceUniverse.getUniverseUUID(),
         pe.getMessage());
+  }
+
+  @Test
+  public void testYsqlMigrationFileValidationSuccess() throws Exception {
+    when(mockAutoFlagUtil.getPromotedAutoFlags(any(), any(), anyInt())).thenReturn(new HashSet<>());
+    GFlagsValidation.AutoFlagsPerServer autoFlagsPerServer =
+        new GFlagsValidation.AutoFlagsPerServer();
+    autoFlagsPerServer.autoFlagDetails = new ArrayList<>();
+    when(mockGFlagsValidation.extractAutoFlags(anyString(), anyString()))
+        .thenReturn(autoFlagsPerServer);
+    // Both universes have the same migration files
+    Set<String> migrationFiles = new HashSet<>(Arrays.asList("001_init.sql", "002_add_table.sql"));
+    when(mockGFlagsValidation.getYsqlMigrationFilesList(anyString())).thenReturn(migrationFiles);
+    CheckXUniverseAutoFlags task = AbstractTaskBase.createTask(CheckXUniverseAutoFlags.class);
+    CheckXUniverseAutoFlags.Params params = new CheckXUniverseAutoFlags.Params();
+    params.sourceUniverseUUID = sourceUniverse.getUniverseUUID();
+    params.targetUniverseUUID = targetUniverse.getUniverseUUID();
+    task.initialize(params);
+    task.run(); // Should not throw
+  }
+
+  @Test
+  public void testYsqlMigrationFileValidationFailure() throws Exception {
+    when(mockAutoFlagUtil.getPromotedAutoFlags(any(), any(), anyInt())).thenReturn(new HashSet<>());
+    GFlagsValidation.AutoFlagsPerServer autoFlagsPerServer =
+        new GFlagsValidation.AutoFlagsPerServer();
+    autoFlagsPerServer.autoFlagDetails = new ArrayList<>();
+    when(mockGFlagsValidation.extractAutoFlags(anyString(), anyString()))
+        .thenReturn(autoFlagsPerServer);
+    // Source has a migration file that target does not
+    Set<String> sourceMigrations =
+        new HashSet<>(Arrays.asList("001_init.sql", "002_add_table.sql"));
+    Set<String> targetMigrations = Collections.singleton("001_init.sql");
+    when(mockGFlagsValidation.getYsqlMigrationFilesList(anyString()))
+        .thenReturn(sourceMigrations)
+        .thenReturn(targetMigrations);
+    CheckXUniverseAutoFlags task = AbstractTaskBase.createTask(CheckXUniverseAutoFlags.class);
+    CheckXUniverseAutoFlags.Params params = new CheckXUniverseAutoFlags.Params();
+    params.sourceUniverseUUID = sourceUniverse.getUniverseUUID();
+    params.targetUniverseUUID = targetUniverse.getUniverseUUID();
+    task.initialize(params);
+    PlatformServiceException ex = assertThrows(PlatformServiceException.class, task::run);
+    assertEquals(BAD_REQUEST, ex.getHttpStatus());
+    assertEquals("Ysql migration files are not the same.", ex.getMessage());
   }
 }
